@@ -1,17 +1,21 @@
 package de.medizininformatik_initiative.process.report.service;
 
+import java.util.EnumSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Set;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.camunda.bpm.engine.delegate.DelegateExecution;
 import org.hl7.fhir.r4.model.Bundle;
+import org.hl7.fhir.r4.model.ResourceType;
 import org.hl7.fhir.r4.model.Task;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.util.MultiValueMap;
 import org.springframework.web.util.UriComponents;
 import org.springframework.web.util.UriComponentsBuilder;
 
@@ -32,14 +36,17 @@ public class CheckSearchBundle extends AbstractServiceDelegate
 	private static final String CAPABILITY_STATEMENT_PATH = "metadata";
 	private static final String SUMMARY_SEARCH_PARAM = "_summary";
 	private static final String SUMMARY_SEARCH_PARAM_VALUE_COUNT = "count";
+	private static final String TYPE_SEARCH_PARAM = "type";
+
+	private static final Set<String> ALL_RESOURCE_TYPES = EnumSet.allOf(ResourceType.class).stream()
+			.map(ResourceType::name).collect(Collectors.toSet());
 
 	private static final List<String> DATE_SEARCH_PARAMS = List.of("date", "recorded-date", "onset-date", "effective",
 			"effective-time", "authored", "collected", "issued", "period", "location-period", "occurrence");
-	private static final List<String> CODE_SEARCH_PARAMS = List.of("code", "ingredient-code");
-	private static final List<String> OTHER_SEARCH_PARAMS = List.of("_profile", "type", SUMMARY_SEARCH_PARAM);
-
+	private static final List<String> TOKEN_SEARCH_PARAMS = List.of("code", "ingredient-code", "type");
+	private static final List<String> OTHER_SEARCH_PARAMS = List.of("_profile", "_summary");
 	private static final List<String> VALID_SEARCH_PARAMS = Stream
-			.of(DATE_SEARCH_PARAMS.stream(), CODE_SEARCH_PARAMS.stream(), OTHER_SEARCH_PARAMS.stream()).flatMap(s -> s)
+			.of(DATE_SEARCH_PARAMS.stream(), TOKEN_SEARCH_PARAMS.stream(), OTHER_SEARCH_PARAMS.stream()).flatMap(s -> s)
 			.toList();
 
 	public CheckSearchBundle(ProcessPluginApi api)
@@ -88,11 +95,10 @@ public class CheckSearchBundle extends AbstractServiceDelegate
 
 	private void testRequestMethod(List<Bundle.BundleEntryComponent> searches)
 	{
+		long searchesCount = searches.size();
 		long httpGetCount = searches.stream().filter(Bundle.BundleEntryComponent::hasRequest)
 				.map(Bundle.BundleEntryComponent::getRequest).filter(Bundle.BundleEntryRequestComponent::hasMethod)
 				.map(Bundle.BundleEntryRequestComponent::getMethod).filter(Bundle.HTTPVerb.GET::equals).count();
-
-		int searchesCount = searches.size();
 
 		if (searchesCount != httpGetCount)
 			throw new RuntimeException("Search Bundle contains HTTP method other then GET");
@@ -100,44 +106,74 @@ public class CheckSearchBundle extends AbstractServiceDelegate
 
 	private void testRequestUrls(List<Bundle.BundleEntryComponent> searches)
 	{
+		int searchesCount = searches.size();
 		List<Bundle.BundleEntryRequestComponent> requests = searches.stream()
 				.filter(Bundle.BundleEntryComponent::hasRequest).map(Bundle.BundleEntryComponent::getRequest)
 				.filter(Bundle.BundleEntryRequestComponent::hasUrl).toList();
-
 		int requestCount = requests.size();
-		int searchesCount = searches.size();
 
 		if (searchesCount != requestCount)
 			throw new RuntimeException("Search Bundle contains request without url");
 
 		List<UriComponents> uriComponents = requests.stream()
-				.map(r -> UriComponentsBuilder.fromUriString(r.getUrl()).build()).collect(Collectors.toList());
+				.map(r -> UriComponentsBuilder.fromUriString(r.getUrl()).build()).toList();
 
-		testContainsSummaryCount(uriComponents);
+		testContainsOnlyResourcePath(uriComponents);
+		testContainsValidSummaryCount(uriComponents);
 		testContainsValidSearchParams(uriComponents);
 		testContainsValidDateSearchParams(uriComponents);
-		testContainsValidCodeSearchParams(uriComponents);
+		testContainsValidTokenSearchParams(uriComponents);
 	}
 
-	private void testContainsSummaryCount(List<UriComponents> uriComponents)
+	private void testContainsOnlyResourcePath(List<UriComponents> uriComponents)
+	{
+		uriComponents.stream().filter(u -> !CAPABILITY_STATEMENT_PATH.equals(u.getPath())).forEach(this::testPath);
+	}
+
+	private void testPath(UriComponents uriComponents)
+	{
+		if (!ALL_RESOURCE_TYPES.contains(uriComponents.getPath()))
+		{
+			throw new RuntimeException(
+					"Search Bundle contains request url with forbidden path - [" + uriComponents.getPath() + "]");
+		}
+	}
+
+	private void testContainsValidSummaryCount(List<UriComponents> uriComponents)
 	{
 		uriComponents.stream().filter(u -> !CAPABILITY_STATEMENT_PATH.equals(u.getPath()))
-				.map(u -> u.getQueryParams().toSingleValueMap()).forEach(this::testSummaryCount);
+				.map(UriComponents::getQueryParams).forEach(this::testSummaryCount);
 	}
 
-	private void testSummaryCount(Map<String, String> queryParams)
+	private void testSummaryCount(MultiValueMap<String, String> queryParams)
 	{
-		if (!SUMMARY_SEARCH_PARAM_VALUE_COUNT.equals(queryParams.get(SUMMARY_SEARCH_PARAM)))
-			throw new RuntimeException("Search Bundle contains request url without _summary=count");
+		List<String> summaryParams = queryParams.get(SUMMARY_SEARCH_PARAM);
+
+		if (summaryParams == null || summaryParams.isEmpty())
+		{
+			throw new RuntimeException("Search Bundle contains request url without _summary parameter");
+		}
+
+		if (summaryParams.size() > 1)
+		{
+			throw new RuntimeException("Search Bundle contains request url with more than one _summary parameter");
+		}
+
+		if (!SUMMARY_SEARCH_PARAM_VALUE_COUNT.equals(summaryParams.get(0)))
+		{
+			throw new RuntimeException(
+					"Search Bundle contains request url with unexpected _summary parameter value (expected: count, actual: "
+							+ summaryParams.get(0) + ")");
+		}
 	}
 
 	private void testContainsValidSearchParams(List<UriComponents> uriComponents)
 	{
 		uriComponents.stream().filter(u -> !CAPABILITY_STATEMENT_PATH.equals(u.getPath()))
-				.map(u -> u.getQueryParams().toSingleValueMap()).forEach(this::testSearchParamNames);
+				.map(UriComponents::getQueryParams).forEach(this::testSearchParamNames);
 	}
 
-	private void testSearchParamNames(Map<String, String> queryParams)
+	private void testSearchParamNames(MultiValueMap<String, String> queryParams)
 	{
 		if (queryParams.keySet().stream().map(s -> MODIFIERS.matcher(s).replaceAll(""))
 				.anyMatch(s -> !VALID_SEARCH_PARAMS.contains(s)))
@@ -148,13 +184,14 @@ public class CheckSearchBundle extends AbstractServiceDelegate
 	private void testContainsValidDateSearchParams(List<UriComponents> uriComponents)
 	{
 		uriComponents.stream().filter(u -> !CAPABILITY_STATEMENT_PATH.equals(u.getPath()))
-				.map(u -> u.getQueryParams().toSingleValueMap()).forEach(this::testSearchParamDateValues);
+				.map(UriComponents::getQueryParams).forEach(this::testSearchParamDateValues);
 	}
 
-	private void testSearchParamDateValues(Map<String, String> queryParams)
+	private void testSearchParamDateValues(MultiValueMap<String, String> queryParams)
 	{
 		List<Map.Entry<String, String>> dateParams = queryParams.entrySet().stream()
-				.filter(e -> DATE_SEARCH_PARAMS.contains(MODIFIERS.matcher(e.getKey()).replaceAll(""))).toList();
+				.filter(e -> DATE_SEARCH_PARAMS.contains(MODIFIERS.matcher(e.getKey()).replaceAll("")))
+				.flatMap(e -> e.getValue().stream().map(v -> Map.entry(e.getKey(), v))).toList();
 
 		List<Map.Entry<String, String>> erroneousDateFilters = dateParams.stream()
 				.filter(e -> !e.getValue().startsWith(DATE_EQUALITY_FILTER)).toList();
@@ -173,23 +210,31 @@ public class CheckSearchBundle extends AbstractServiceDelegate
 							.map(e -> e.getKey() + ":" + e.getValue()).collect(Collectors.joining(",")) + "]");
 	}
 
-	private void testContainsValidCodeSearchParams(List<UriComponents> uriComponents)
+	private void testContainsValidTokenSearchParams(List<UriComponents> uriComponents)
 	{
 		uriComponents.stream().filter(u -> !CAPABILITY_STATEMENT_PATH.equals(u.getPath()))
-				.map(u -> u.getQueryParams().toSingleValueMap()).forEach(this::testSearchParamCodeValues);
+				.forEach(this::testSearchParamTokenValues);
 	}
 
-	private void testSearchParamCodeValues(Map<String, String> queryParams)
+	private void testSearchParamTokenValues(UriComponents uriComponents)
 	{
-		List<Map.Entry<String, String>> codeParams = queryParams.entrySet().stream()
-				.filter(e -> CODE_SEARCH_PARAMS.contains(MODIFIERS.matcher(e.getKey()).replaceAll(""))).toList();
+		List<Map.Entry<String, String>> codeParams = uriComponents.getQueryParams().entrySet().stream()
+				.filter(e -> TOKEN_SEARCH_PARAMS.contains(MODIFIERS.matcher(e.getKey()).replaceAll("")))
+				.flatMap(e -> e.getValue().stream().map(v -> Map.entry(e.getKey(), v))).toList();
 
+		// Exemption for Encounter.type token params
 		List<Map.Entry<String, String>> erroneousCodeValues = codeParams.stream()
-				.filter(e -> !e.getValue().endsWith("|")).toList();
+				.filter(e -> !e.getValue().endsWith("|"))
+				.filter(e -> !isEncounterType(uriComponents.getPath(), e.getKey())).toList();
 
 		if (erroneousCodeValues.size() > 0)
 			throw new RuntimeException(
 					"Search Bundle contains code search params not limited to system - [" + erroneousCodeValues.stream()
 							.map(e -> e.getKey() + ":" + e.getValue()).collect(Collectors.joining(",")) + "]");
+	}
+
+	private boolean isEncounterType(String path, String paramName)
+	{
+		return TYPE_SEARCH_PARAM.equals(paramName) && ResourceType.Encounter.name().equals(path);
 	}
 }
